--- a/docs/content/docs/core/game-flow/context.mdx
+++ b/docs/content/docs/core/game-flow/context.mdx
@@ -31,8 +31,8 @@ All methods and properties listed below are accessible via `ctx` parameter of th
 
 <Callout title="Good to know">
   You might encounter some "mysterious" methods not listed here. Anything not in this doc
-  is most likely only intended for internal use and you should better ignore it. It might
-  get cleaned up in the future.
+  is most likely only intended for internal use and you should better ignore it. It will
+  be tidied up in the future.
 </Callout>
 
 ### config
@@ -40,6 +40,8 @@ All methods and properties listed below are accessible via `ctx` parameter of th
 | Property     | Type                  |
 | ------------ | --------------------- |
 | `ctx.config` | `readonly GameConfig` |
+
+Readonly access to the game configuration.
 
 [Further reading](/docs/core/config)
 
