--- a/docs/content/docs/core/config/game-modes/reel-sets.mdx
+++ b/docs/content/docs/core/config/game-modes/reel-sets.mdx
@@ -1,7 +1,9 @@
 ---
-title: Reel Sets
+title: Reel Sets (Generators)
 description: How to define your reel sets
 icon: Grid3x3
 ---
 
-Game modes
+---
+
+## What is a Reel Set
