--- a/docs/content/docs/core/config/symbols.mdx
+++ b/docs/content/docs/core/config/symbols.mdx
@@ -133,7 +133,7 @@ Symbol properties like multipliers **should be modified during game flow** for g
 If your game only requires static multipliers (e.g., a consistent 2x wild multiplier),
 the above approach is perfectly acceptable.
 
-## Comparing Symbols
+## Compare Symbols
 
 Sometimes you might need to compare two symbols.
 Each `GameSymbol` instance has a `compare()` method for this purpose.
