--- a/docs/content/docs/core/config/index.mdx
+++ b/docs/content/docs/core/config/index.mdx
@@ -35,7 +35,7 @@ export const game = createSlotGame({
   gameModes: {},
   userState: {},
   hooks: {
-    onHandleGameFlow: () => {}
+    onHandleGameFlow: () => {},
   },
 })
 ```
@@ -62,7 +62,8 @@ You can now prepare the rest of the configuration.
 
 ```ts lineNumbers
 import { createSlotGame, GameConfig, InferGameType } from "@slot-engine/core" // [!code --]
-import { // [!code ++]
+import {
+  // [!code ++]
   createSlotGame, // [!code ++]
   GameConfig, // [!code ++]
   InferGameType, // [!code ++]
@@ -103,42 +104,18 @@ At the heart of your game lies the actual [implementation](/docs/core/game-flow)
 Finally, [simulate](/docs/core/simulation) your game, tweak settings to improve the feel of it,
 and [optimize](/docs/core/optimization) results to achieve your desired RTP.
 
-## `createSlotGame()` Options [#options]
+## createSlotGame() Options [#options]
 
-### `id`: string
+All options are required.
 
-A unique identifier for your game.
-
-### `name`: string
-
-The name of your game.
-
-### `maxWinX`: number
-
-The maximum bet multiplier payout. Wins exceeding this number will be capped.
-
-### `gameModes`: Record\<string, GameMode\>
-
-See: [Game Configuration: Game Modes](/docs/core/config/game-modes)
-
-### `symbols`: Record\<string, GameSymbol\>
-
-See: [Game Configuration: Symbols](/docs/core/config/symbols)
-
-### `padSymbols`: number
-
-Amount of padding symbol rows above and below the active board.
-Used to display partially visible symbols in the frontend at the top and bottom of the board.
-**Defaults to 1**
-
-### `scatterToFreespins`: Record\<string, Record\<number, number>>
-
-A mapping from spin type to scatter counts to the number of free spins awarded.
-
-### `userState`: Record\<string, any>
-
-See: [Game Configuration: User State](/docs/core/config/custom-state)
-
-### `hooks`: Record\<string, (ctx) => unknown>
-
-See: [Game Configuration: Hooks](/docs/core/config/hooks)
+| Property             | Type                                     | Description                                                                                                                                                                              |
+| -------------------- | ---------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `id`                 | `string`                                 | A unique identifier for your game.                                                                                                                                                       |
+| `name`               | `string`                                 | The name of your game.                                                                                                                                                                   |
+| `maxWinX`            | `number`                                 | The maximum bet multiplier payout. Wins exceeding this number will be capped.                                                                                                            |
+| `gameModes`          | `Record<string, GameMode>`               | See: [Game Configuration: Game Modes](/docs/core/config/game-modes)                                                                                                                      |
+| `symbols`            | `Record<string, GameSymbol>`             | See: [Game Configuration: Symbols](/docs/core/config/symbols)                                                                                                                            |
+| `padSymbols`         | `number`                                 | Amount of padding symbol rows above and below the active board.<br/>Used to display partially visible symbols in the frontend at the top and bottom of the board.<br/><br/>Defaults to 1 |
+| `scatterToFreespins` | `Record<string, Record<number, number>>` | A mapping from spin type to scatter counts to the number of free spins awarded.                                                                                                          |
+| `userState`          | `Record<string, any>`                    | See: [Game Configuration: User State](/docs/core/config/custom-state)                                                                                                                    |
+| `hooks`              | `Record<string, (ctx) => unknown>`       | See: [Game Configuration: Hooks](/docs/core/config/hooks)                                                                                                                                |
