--- a/docs/content/docs/core/config/game-modes/index.mdx
+++ b/docs/content/docs/core/config/game-modes/index.mdx
@@ -6,7 +6,7 @@ icon: Dices
 
 ---
 
-## What is a Game Mode
+## Introduction
 
 A game mode defines a **purchasable** game behavior, similar to "bet modes" in the Stake Math SDK.
 Game modes can vary in cost, outcomes, symbols, and mechanics.
