--- a/docs/content/docs/core/config/game-modes/reel-sets.mdx
+++ b/docs/content/docs/core/config/game-modes/reel-sets.mdx
@@ -6,7 +6,7 @@ icon: Grid3x3
 
 ---
 
-## What is a Reel Set
+## Introduction
 
 A reel set is a list of reel strips, where each reel strip defines the symbols
 that can land on the board for that specific reel.
