--- a/docs/content/docs/core/config/game-modes/result-sets.mdx
+++ b/docs/content/docs/core/config/game-modes/result-sets.mdx
@@ -128,7 +128,7 @@ Let's say you have these 3 result sets:
 The total quota here is 100 (but can be any number, doesn't have to be 100).
 This means that, for example, every 100th simulation will result in a max win.
 
-**When using** [optimization](/docs/core/optimization), the quota **does not define the actual frequency** of specific outcomes when playing,
+**When using** [optimization](/docs/core/optimization), the quota **does not represent the actual frequency** of specific outcomes when playing,
 because the optimizer will redistribute the weights of all simulations.
 
 ### multiplier [!toc]
@@ -175,9 +175,9 @@ Additional data that can be used in a custom evaluation function or in your game
 | ---------- | ------------------------------------------------- | -------- |
 | `evaluate` | `(ctx: EvaluationContext<TUserState>) => boolean` |          |
 
-Inject custom checks into the simulation evaluation logic.
+Inject **custom checks** into the simulation evaluation logic.
 Use this to check for free spins that upgraded to super free spins
-or any other arbitrary simulation criteria not supported in the core.
+or **any other arbitrary simulation criteria** not supported in the core.
 
 For example, you can use the `userData` from the result set to handle different game behavior.
 Then in your game implementation, set the state accordingly to ensure the simulation passes the criteria.
