--- a/docs/content/docs/core/config/hooks.mdx
+++ b/docs/content/docs/core/config/hooks.mdx
@@ -4,4 +4,35 @@ description: Inject custom logic into the Core library
 icon: Workflow
 ---
 
-Type-Safety
+---
+
+## Introduction
+
+Hooks are a way of adding your own code on top of Slot Engine.
+They allow you to execute code or update state at specific points of the program.
+
+## List of Hooks
+
+These are the hooks you can define in your game configuration.
+
+### onHandleGameFlow
+
+| Property           | Type                                   | Required |
+| ------------------ | -------------------------------------- | -------- |
+| `onHandleGameFlow` | `(ctx: HookContext<GameType>) => void` | yes      |
+
+The complete game logic must be [implemented](/docs/core/game-flow) in this hook.
+
+### onSimulationAccepted
+
+| Property               | Type                                   | Required |
+| ---------------------- | -------------------------------------- | -------- |
+| `onSimulationAccepted` | `(ctx: HookContext<GameType>) => void` |          |
+
+This hook is called after a simulation is accepted and the payout has been written to the book.
+Useful to run code after completing a simulation and before continuing with the next.
+
+<Callout title="Important">
+  **No payouts or results should be altered using this hook!**
+  But adding additional data with `ctx.record()` is perfectly fine.
+</Callout>
