--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -42,7 +42,7 @@ Get started creating your first game using the `@slot-engine/core` library.
 
     Set up your Node.js project and install `@slot-engine/core`. **Using TypeScript instead of JavaScript is highly recommended.**
 
-    **Slot Engine requires Node >= 23.8.0 or >= 22.15.0** to make use of native Zstandard compression.
+    **Slot Engine requires Node >= 23.8.0 or >= 22.15.0** to make use of native Zstandard compression features.
 
     ```bash tab="npm"
     npm i @slot-engine/core
