--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -90,6 +90,7 @@ Get started creating your first game using the `@slot-engine/core` library.
       id: "my-game",
       name: "My Game",
       maxWinX: 5000,
+      scatterToFreespins: {},
       gameModes,
       symbols,
       userState,
