--- a/docs/content/docs/core/slot-engine-vs-stake-math-sdk.mdx
+++ b/docs/content/docs/core/slot-engine-vs-stake-math-sdk.mdx
@@ -45,7 +45,7 @@ Slot Engine improves the developer experience by reducing some complexity throug
 
 #### Simplified Architecture
 - Consciously avoids exposing all source code during development
-- Provides utility functions, abstractions, and hooks instead
+- Provides utility functions, services, and hooks instead
 - Reduces the need to override core functionality
 
 #### Better Developer Experience
